--- a/RockSniffer/packages.config
+++ b/RockSniffer/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net461" />
 </packages>
