--- a/RockSniffer/packages.config
+++ b/RockSniffer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DiscordRichPresence" version="1.0.95" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net461" />
