--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "RockSnifferLib"]
 	path = RockSnifferLib
-	url = https://github.com/PoizenJam/RockSnifferLib
+	url = https://github.com/PoizenJam/RockSnifferLib	
+   	branch = master
