--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RockSnifferLib"]
 	path = RockSnifferLib
-	url = https://github.com/kokolihapihvi/RockSnifferLib
+	url = https://github.com/kokolihapihvi/RockSnifferLib.git
