Fix psarclib reference

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/kokolihapihvi/RockSnifferLib.git
 [submodule "Rocksmith2014PsarcLib"]
 	path = Rocksmith2014PsarcLib
-	url = ./Rocksmith2014PsarcLib
+	url = https://github.com/kokolihapihvi/Rocksmith2014PsarcLib.git
