Only publish RockSniffer project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       - name: Publish
         run: |
-          dotnet publish -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true
+          dotnet publish RockSniffer -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true
       - uses: actions/upload-artifact@v3
         with:
          name: publish
