--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --configuration Release --no-restore --runtime win-x64 --framework=net6.0-windows
+        run: dotnet build --configuration Release --no-restore
       - name: Publish
         run: |
-          dotnet publish RockSniffer --no-build -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true
+          dotnet publish RockSniffer -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true
       - uses: actions/upload-artifact@v3
         with:
          name: publish
