--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           name: v${{ steps.get-version.outputs.SNIFFER_VERSION }}
           tag: v${{ steps.get-version.outputs.SNIFFER_VERSION }}
+          allowUpdates: true
           updateOnlyUnreleased: true
           commit: ${{ github.sha }}
           prerelease: true
