Update ci.yml: replace existing artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,6 @@ jobs:
           prerelease: true
           draft: true
           generateReleaseNotes: true
+          removeArtifacts: true
+          replacesArtifacts: true
           artifacts: "*.zip"
