--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
           prerelease: true
           draft: true
           generateReleaseNotes: true
+          omitBodyDuringUpdate: true
           removeArtifacts: true
           replacesArtifacts: true
           artifacts: "*.zip"
