--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           SNIFFER_VERSION: ${{ steps.build.outputs.SNIFFER_VERSION }}
         run: |
-          dotnet publish RockSniffer -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true
+          dotnet publish RockSniffer -c Release -o ./publish --runtime win-x64 --framework=net6.0-windows --self-contained false -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
           cp -r ./addons ./publish/addons
           (cd ./publish && zip -r "$OLDPWD/RockSniffer $SNIFFER_VERSION.zip" .)
           echo "$SNIFFER_VERSION" > VERSION
